--- a/src/main/resources/c2.properties
+++ b/src/main/resources/c2.properties
@@ -1,5 +1,5 @@
-org.apache.wss4j.crypto.provider=org.apache.wss4j.common.crypto.Merlin
+org.apache.wss4j.crypto.provider=minder.as4Utils.Merlin
 org.apache.wss4j.crypto.merlin.keystore.type=jks
 org.apache.wss4j.crypto.merlin.keystore.password=123456
-org.apache.wss4j.crypto.merlin.keystore.alias=testGateway1
-org.apache.wss4j.crypto.merlin.keystore.file=testGateway1.jks
+org.apache.wss4j.crypto.merlin.keystore.alias=c2
+org.apache.wss4j.crypto.merlin.keystore.file=c2.jks
