--- a/src/main/resources/trust.properties
+++ b/src/main/resources/trust.properties
@@ -1,4 +1,4 @@
-org.apache.wss4j.crypto.provider=org.apache.wss4j.common.crypto.Merlin
+org.apache.wss4j.crypto.provider=minder.as4Utils.Merlin
 org.apache.wss4j.crypto.merlin.keystore.type=jks
 org.apache.wss4j.crypto.merlin.keystore.password=123456
 org.apache.wss4j.crypto.merlin.keystore.alias=trust
