--- a/src/main/resources/c3.properties
+++ b/src/main/resources/c3.properties
@@ -1,5 +1,5 @@
-org.apache.wss4j.crypto.provider=org.apache.wss4j.common.crypto.Merlin
+org.apache.wss4j.crypto.provider=minder.as4Utils.Merlin
 org.apache.wss4j.crypto.merlin.keystore.type=jks
 org.apache.wss4j.crypto.merlin.keystore.password=123456
-org.apache.wss4j.crypto.merlin.keystore.alias=testGateway2
-org.apache.wss4j.crypto.merlin.keystore.file=testGateway2.jks
+org.apache.wss4j.crypto.merlin.keystore.alias=c3
+org.apache.wss4j.crypto.merlin.keystore.file=c3.jks
