--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>minder</groupId>
-    <artifactId>AS4Utils</artifactId>
-    <version>1.1.1</version>
+    <artifactId>as4-utils</artifactId>
+    <version>1.2</version>
 
     <build>
         <plugins>
@@ -19,7 +19,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>AS4Utils</finalName>
     </build>
 
     <dependencies>
@@ -32,12 +31,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
         </dependency>
         <dependency>
             <groupId>org.apache.wss4j</groupId>
@@ -73,6 +66,12 @@
             <groupId>org.apache.wss4j</groupId>
             <artifactId>wss4j-ws-security-stax</artifactId>
             <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
